basic map and step tracking functionality

--- a/src/index.html
+++ b/src/index.html
@@ -10,4 +10,8 @@
 <body>
   <app-root></app-root>
 </body>
+<footer>
+
+  <div class="text-center">  Michał Zieliński 2024
+</div></footer>
 </html>
